--- a/package.json
+++ b/package.json
@@ -1,5 +1,27 @@
 {
   "name": "freemarket_sample_62c",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/urayuma/freemarket_sample_62c.git"
+  },
+  "author": "ura",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/urayuma/freemarket_sample_62c/issues"
+  },
+  "homepage": "https://github.com/urayuma/freemarket_sample_62c#readme",
+  "devDependencies": {
+    "eslint": "^6.6.0"
+  }
 }
