add ユーザ登録中にページを離れたときにsessionを削除する機能を追加(sessionが残っているとパスワードが入力できなかったり,意図しない動作をするため) /パスワードの表示・非表示切替を追加

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -46,3 +46,7 @@ Metrics/MethodLength:
 # Use nested module/class definitions instead of compact style.
 Style/ClassAndModuleChildren:
   Enabled: false
+
+# メソッド名のprefixに「set_」「get_」を許可
+AccessorMethodName:
+  Enabled: false
